# recall

./: .gitignore  CHANGELOG.md  LICENSE  MEMORY.md  README.md  pyproject.toml
.claude-plugin/: plugin.json
.claude-plugin/skills/: memoriagrain.md  recall.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
docs/: architecture.md  claude-code-plugin.md  promotion-algorithm.md
examples/claude_code_plugin/: README.md
examples/cross_agent_learning/: README.md  agent_review.py  agent_search.py  run.sh
examples/cross_agent_learning/captured/: agent_review.txt  agent_search.txt
examples/foundry_before_after/: README.md  after.py  before.py  run.sh  stub_llm.py
examples/foundry_before_after/captured/: after.txt  before.txt
examples/foundry_before_after/seed/: auth_guide.md  kb_operations.md  qa_fixtures.json
memoriagrain/: __init__.py  cli.py  confidence.py  decay.py  decorator.py  diff.py  embeddings.py  freshness.py  heal.py  inheritance.py  judge.py  promote.py  seed.py  tool.py
memoriagrain/hooks/: __init__.py  claude_code_stop.py  pre_tool.py
memoriagrain/store/: __init__.py  base.py  foundry_iq.py  sqlite.py
recall/: __init__.py  cli.py  confidence.py  decay.py  decorator.py  diff.py  embeddings.py  freshness.py  heal.py  inheritance.py  judge.py  promote.py  seed.py  tool.py
recall/hooks/: __init__.py  claude_code_stop.py  pre_tool.py
recall/store/: __init__.py  base.py  foundry_iq.py  sqlite.py
tests/: __init__.py  conftest.py  test_confidence.py  test_decorator.py  test_diff.py  test_freshness.py  test_heal.py  test_inheritance.py  test_promote.py  test_seed.py  test_store_sqlite.py  test_tool.py
tests/fixtures/seed_corpus/: foundry_auth.md  knowledge_bases.md  memory_patterns.md
