[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recall-agent"
version = "0.1.0"
description = "Memory the AI agent can call as a tool. Multi-grain, provenance-tracked, self-healing."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "recall-agent contributors" },
]
keywords = [
    "agents",
    "llm",
    "memory",
    "microsoft-foundry",
    "foundry-iq",
    "claude-code",
    "mcp",
    "agent-framework",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: Pytest",
]
dependencies = [
    "numpy>=1.24",
    "typer>=0.12",
    "rich>=13.0",
    "openai>=1.0",
    "azure-identity>=1.15",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=2.2",
]
pdf = [
    "pypdf>=4.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]
all = [
    "recall-agent[embeddings,pdf,dev]",
]

[project.scripts]
recall = "recall.cli:app"

[project.urls]
Homepage = "https://github.com/fyeshi/recall"
Documentation = "https://github.com/fyeshi/recall/tree/main/docs"
Repository = "https://github.com/fyeshi/recall"
Issues = "https://github.com/fyeshi/recall/issues"

[tool.hatch.build.targets.wheel]
packages = ["recall"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["recall"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "network: marks tests that require network access (deselect with '--no-network')",
]
addopts = "-v"
testpaths = ["tests"]
